--- a/index.html
+++ b/index.html
@@ -7,8 +7,8 @@
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="https://unpkg.com/swiper/swiper-bundle.min.css" />
   <link rel="stylesheet" href="https://unpkg.com/simplebar@latest/dist/simplebar.css">
-  <link rel="stylesheet" href="css/choices.min.css">
-  <link rel="stylesheet" href="css/style.css">
+  <link rel="stylesheet" href="../css/choices.min.css">
+  <link rel="stylesheet" href="../css/style.css">
   <title>Blanchard</title>
 </head>
 
